GearsetPOC/force-app/main/default/objects/MC_Calendar_Master__c/MC_Calendar_Master__c.object-meta.xml
<CustomObject>
    <label>Calendar Category</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Calendar Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calendar Category</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>