GearsetPOC/force-app/main/default/objects/MC_Calendar_Master__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <length>200</length>
    <type>Text</type>
</CustomField>