GearsetPOC/force-app/main/default/objects/MC_Calendar_Master__c/fields/Channel_Icon_Url__c.field-meta.xml
<CustomField>
    <fullName>Channel_Icon_Url__c</fullName>
    <formula>IF(Channel__c==&#39;Email&#39;,&quot;/sfc/servlet.shepherd/version/download/0683z00000QNhbF&quot;,
(IF(Channel__c==&#39;SMS&#39;, &quot;/sfc/servlet.shepherd/version/download/0683z00000QNhbG&quot;, &quot;&quot;)
))</formula>
    <label>Channel Icon Url</label>
    <type>Text</type>
</CustomField>