GearsetPOC/force-app/main/default/objects/MC_Calendar_Master__c/fields/Child_count__c.field-meta.xml
<CustomField>
    <fullName>Child_count__c</fullName>
    <label>Child count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>