GearsetPOC/force-app/main/default/objects/MC_Calendar_Master__c/listViews/All_Calendar_Category.listView-meta.xml
<ListView>
    <fullName>All_Calendar_Category</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Date_Sent__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Main_Category__c</columns>
    <columns>Subcategory__c</columns>
    <columns>Child_count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Calendar Category</label>
</ListView>